--- a/class-example/my-app/src/app/globals.css
+++ b/class-example/my-app/src/app/globals.css
@@ -26,7 +26,9 @@
     /*--foreground: #ededed;*/
   }
 }
+
 /* 내가 만드는 부트스트랩 CSS */
+
 /********* tailwind V3버전 *********/
 /*@layer utilities{
     .철수의상자{
@@ -34,10 +36,15 @@
         font-size: 30px;
     }
 }*/
+
 /********* tailwind V4버전(class 이름 한글명 적용 안되는듯..) *********/
 @utility chulsuBox{
     color: green;
     font-size: 30px;
+}
+
+*{
+    font-family: var(--글로벌폰트변수);
 }
 
 body {
